# Holocron-UI

./: CMakeLists.txt  CMakeLists.txt.bak  README.md  main.cpp  main_old.cpp
.github/workflows/: cmake.yml
.github/workflows/helpers/: sdl2_image-config-version.cmake  sdl2_mixer-config.cmake  sdl2_ttf-config.cmake
.github/workflows/scripts/: run-valgrind.sh  run_sanitizers.sh
.github/workflows/sdl-cmake-config/: sdl2_image-config.cmake  sdl2_mixer-config-version.cmake
include/: Widget.h  Window.h
src/: Application.cpp  Application.h  BoxContainer.cpp  BoxContainer.h  Button.cpp  Button.h  Container.cpp  Container.h  DemoWidget.cpp  DemoWidget.h  EventDispatcher.h  GridContainer.cpp  GridContainer.h  TextBox.cpp  TextBox.h  TextInput.cpp  TextInput.h  Utilities.cpp  Utilities.h  Widget.cpp  Widget.h  Window.cpp  Window.h  exceptions.h  main.cpp
